# src/main/java/com/pep/restaurant/ms/bff/web/rest/RestaurantController.java
@@ -1,5 +1,6 @@
 package com.pep.restaurant.ms.bff.web.rest;
 
+import com.pep.restaurant.ms.bff.service.HereService;
 import com.pep.restaurant.ms.bff.service.RestaurantService;
 import com.pep.restaurant.ms.bff.service.mapper.RestaurantMapper;
 import com.pep.restaurant.ms.bff.web.api.RestaurantApi;
@@ -20,23 +21,27 @@ public class RestaurantController implements RestaurantApi, ApiController {
 
     public static final String RESTAURANT_RESTAURANT_ID = "/restaurant/{restaurantId}";
     public static final String RESTAURANT = "/restaurant";
+    public static final String RESTAURANT_PERSIST_LATITUDE_LONGITUDE = "/restaurant/{lat}/{lng}";
     public static final String RESTAURANT_ADD_EMPLOYEE_RESTAURANT_ID_EMPLOYEE_ID =
             "/restaurant/add/employee/{restaurantId}/{employeeId}";
     public static final String RESTAURANT_REMOVE_EMPLOYEE_RESTAURANT_ID_EMPLOYEE_ID =
             "/restaurant/remove/employee/{restaurantId}/{employeeId}";
     private final RestaurantService restaurantService;
     private final RestaurantMapper restaurantMapper;
+    private final HereService hereService;
 
 
     /**
      * Constructor for Restaurant Controller.
-     *
-     * @param restaurantService Restaurant Service.
+     *  @param restaurantService Restaurant Service.
      * @param restaurantMapper  Restaurant Mapper.
+     * @param hereService Here Service.
      */
-    public RestaurantController(final RestaurantService restaurantService, final RestaurantMapper restaurantMapper) {
+    public RestaurantController(final RestaurantService restaurantService, final RestaurantMapper restaurantMapper,
+                                final HereService hereService) {
         this.restaurantService = restaurantService;
         this.restaurantMapper = restaurantMapper;
+        this.hereService = hereService;
     }
 
     /**
@@ -153,5 +158,21 @@ public class RestaurantController implements RestaurantApi, ApiController {
     public ResponseEntity<List<RestaurantDTO>> getAllRestaurants() {
         return ResponseEntity.ok(restaurantMapper.mapRestaurantListToRestaurantDTOList(
                 restaurantService.getAllRestaurants()));
+    }
+
+    /**
+     * Controller to Persist Restaurants Near the Coordinate.
+     * @param lat latitude.
+     * @param lng longitude.
+     * @return Restaurant DTO List.
+     */
+    @PreAuthorize("hasAnyRole('ADMIN','USER')")
+    @GetMapping(value = RESTAURANT_PERSIST_LATITUDE_LONGITUDE,
+            produces = {"application/json"},
+            consumes = {"application/json"})
+    @Override
+    public ResponseEntity<List<RestaurantDTO>> persistRestaurantsNearTheCoordinate(final String lat, final String lng) {
+        return ResponseEntity.ok(restaurantMapper.mapRestaurantListToRestaurantDTOList(
+                hereService.persistRestaurantsNearTheCoordinate(lat, lng)));
     }
 }
